fix jump

--- a/src/app.scss
+++ b/src/app.scss
@@ -17,6 +17,11 @@ body {
   font-family: 'Exo 2', serif;
 }
 
+html {
+  overflow-y: scroll;
+  scrollbar-gutter: stable;
+}
+
 @media (max-width: 1280px) {
   :root {
     --content-padding: 15px;
