--- a/src/components/UI/Input/input.module.scss
+++ b/src/components/UI/Input/input.module.scss
@@ -32,7 +32,7 @@
 
 .inputLight {
   background-color: unset;
-  border: 1px solid #AFB2B6;
+  box-shadow: 0 0 0 1px #AFB2B6 inset;
 }
 
 .input::placeholder {
