--- a/src/components/UI/SearchInput/searchInput.module.scss
+++ b/src/components/UI/SearchInput/searchInput.module.scss
@@ -10,7 +10,7 @@
 }
 
 .lightSearchInputContainer {
-  border: 1px solid #AFB2B6;
+  box-shadow: 0 0 0 1px #AFB2B6 inset;
   background-color: #fff;
 }
 
